--- a/自检清单/3.计算机基础/02.网络协议.md
+++ b/自检清单/3.计算机基础/02.网络协议.md
@@ -1,63 +1,68 @@
 #网络协议
 
-
-##1.理解什么是协议，了解TCP/IP网络协议族的构成，每层协议在应用程序中发挥的作用
+##1.理解什么是协议，了解 TCP/IP 网络协议族的构成，每层协议在应用程序中发挥的作用
 
 什么是协议：
 https://blog.csdn.net/fang_a_kai/article/details/80884869
 
-了解TCP/IP网络协议族的构成，每层协议在应用程序中发挥的作用：
+了解 TCP/IP 网络协议族的构成，每层协议在应用程序中发挥的作用：
 https://www.cnblogs.com/LIUYANZUO/p/7302572.html
 
 ##2.三次握手和四次挥手详细原理，为什么要使用这种机制
-见1.理解什么是协议，了解TCP/IP网络协议族的构成，每层协议在应用程序中发挥的作用
+见 1.理解什么是协议，了解 TCP/IP 网络协议族的构成，每层协议在应用程序中发挥的作用
 
-##3.有哪些协议是可靠，TCP有哪些手段保证可靠交付
-###有哪些协议是可靠：
+##3.有哪些协议是可靠，TCP 有哪些手段保证可靠交付 ###有哪些协议是可靠：
 
 TCP 提供可靠传输，无差错、不丢失、不重复、按顺序。
 
-###TCP有哪些手段保证可靠交付：
+###TCP 有哪些手段保证可靠交付：
 
-TCP是通过什么方式来提供可靠传输的 (合理截断数据包，超时重发，校验，失序重新排序，能够丢弃重复数据，TCP可以进行流量控制)
-TCP提供一种面向连接的、可靠的字节流服务。 
+TCP 是通过什么方式来提供可靠传输的 (合理截断数据包，超时重发，校验，失序重新排序，能够丢弃重复数据，TCP 可以进行流量控制)
+TCP 提供一种面向连接的、可靠的字节流服务。
 
-面向连接：意味着两个使用TCP的应用（通常是一个客户和一个服务器）在彼此交换数据之前必须先建立一个TCP连接。在一个TCP连接中，仅有两方进行彼此通信。广播和多播不能用于TCP。
- 
-TCP通过下列方式来提供可靠性：
-1、应用数据被分割成TCP认为最适合发送的数据块。这和UDP完全不同，应用程序产生的数据报长度将保持不变。        (将数据截断为合理的长度)
-2、当TCP发出一个段后，它启动一个定时器，等待目的端确认收到这个报文段。如果不能及时收到一个确认，将重发这个报文段。      (超时重发)
-3、当TCP收到发自TCP连接另一端的数据，它将发送一个确认。这个确认不是立即发送，通常将推迟几分之一秒。          (对于收到的请求，给出确认响应)           (之所以推迟，可能是要对包做完整校验)
-4、TCP将保持它首部和数据的检验和。这是一个端到端的检验和，目的是检测数据在传输过程中的任何变化。
-      如果收到段的检验和有差错，TCP将丢弃这个报文段和不确认收到此报文段。       （希望发端超时并重发）      (校验出包有错，丢弃报文段，不给出响应，TCP发送数据端，超时时会重发数据)
-5、既然TCP报文段作为IP数据报来传输，而IP数据报的到达可能会失序，因此TCP报文段的到达也可能会失序。
-      如果必要，TCP将对收到的数据进行重新排序，将收到的数据以正确的顺序交给应用层。           (对失序数据进行重新排序，然后才交给应用层)           
-6、既然IP数据报会发生重复，TCP的接收端必须丢弃重复的数据。              (对于重复数据，能够丢弃重复数据)        
-7、TCP还能提供流量控制。TCP连接的每一方都有固定大小的缓冲空间。
-      TCP的接收端只允许另一端发送接收端缓冲区所能接纳的数据。这将防止较快主机致使较慢主机的缓冲区溢出。               (TCP可以进行流量控制，防止较快主机致使较慢主机的缓冲区溢出)
-TCP使用的流量控制协议是可变大小的滑动窗口协议。
+面向连接：意味着两个使用 TCP 的应用（通常是一个客户和一个服务器）在彼此交换数据之前必须先建立一个 TCP 连接。在一个 TCP 连接中，仅有两方进行彼此通信。广播和多播不能用于 TCP。
 
-字节流服务：两个应用程序通过TCP连接交换8bit字节构成的字节流。TCP不在字节流中插入记录标识符。我们将这称为字节流服务（bytestreamservice）。
-TCP对字节流的内容不作任何解释:TCP对字节流的内容不作任何解释。TCP不知道传输的数据字节流是二进制数据，还是ASCII字符、EBCDIC字符或者其他类型数据。对字节流的解释由TCP连接双方的应用层解释。 
+TCP 通过下列方式来提供可靠性：
+1、应用数据被分割成 TCP 认为最适合发送的数据块。这和 UDP 完全不同，应用程序产生的数据报长度将保持不变。 (将数据截断为合理的长度)
+2、当 TCP 发出一个段后，它启动一个定时器，等待目的端确认收到这个报文段。如果不能及时收到一个确认，将重发这个报文段。 (超时重发)
+3、当 TCP 收到发自 TCP 连接另一端的数据，它将发送一个确认。这个确认不是立即发送，通常将推迟几分之一秒。 (对于收到的请求，给出确认响应) (之所以推迟，可能是要对包做完整校验)
+4、TCP 将保持它首部和数据的检验和。这是一个端到端的检验和，目的是检测数据在传输过程中的任何变化。
+如果收到段的检验和有差错，TCP 将丢弃这个报文段和不确认收到此报文段。 （希望发端超时并重发） (校验出包有错，丢弃报文段，不给出响应，TCP 发送数据端，超时时会重发数据)
+5、既然 TCP 报文段作为 IP 数据报来传输，而 IP 数据报的到达可能会失序，因此 TCP 报文段的到达也可能会失序。
+如果必要，TCP 将对收到的数据进行重新排序，将收到的数据以正确的顺序交给应用层。 (对失序数据进行重新排序，然后才交给应用层)  
+6、既然 IP 数据报会发生重复，TCP 的接收端必须丢弃重复的数据。 (对于重复数据，能够丢弃重复数据)  
+7、TCP 还能提供流量控制。TCP 连接的每一方都有固定大小的缓冲空间。
+TCP 的接收端只允许另一端发送接收端缓冲区所能接纳的数据。这将防止较快主机致使较慢主机的缓冲区溢出。 (TCP 可以进行流量控制，防止较快主机致使较慢主机的缓冲区溢出)
+TCP 使用的流量控制协议是可变大小的滑动窗口协议。
+
+字节流服务：两个应用程序通过 TCP 连接交换 8bit 字节构成的字节流。TCP 不在字节流中插入记录标识符。我们将这称为字节流服务（bytestreamservice）。
+TCP 对字节流的内容不作任何解释:TCP 对字节流的内容不作任何解释。TCP 不知道传输的数据字节流是二进制数据，还是 ASCII 字符、EBCDIC 字符或者其他类型数据。对字节流的解释由 TCP 连接双方的应用层解释。
 
 参考资料：https://blog.csdn.net/weixin_33811961/article/details/85916113
 
-##4.DNS的作用、DNS解析的详细过程，DNS优化原理
+##4.DNS 的作用、DNS 解析的详细过程，DNS 优化原理
+参考资料：https://www.cnblogs.com/gopark/p/8430916.html
 
+##5.CDN 的作用和原理
+参考资料：https://blog.csdn.net/zhuyucheng123/article/details/57976565
 
-##5.CDN的作用和原理
+##6.HTTP 请求报文和响应报文的具体组成，能理解常见请求头的含义，有几种请求方式，区别是什么
+参考资料：https://blog.csdn.net/a_fool_program_ape/article/details/81748544
 
+##7.HTTP 所有状态码的具体含义，看到异常状态码能快速定位问题
+参考：6.HTTP 请求报文和响应报文的具体组成，能理解常见请求头的含义，有几种请求方式，区别是什么
 
-##6.HTTP请求报文和响应报文的具体组成，能理解常见请求头的含义，有几种请求方式，区别是什么
+##8.HTTP1.1、HTTP2.0 带来的改变
+参考资料：https://www.cnblogs.com/heluan/p/8620312.html
 
+##9.HTTPS 的加密原理，如何开启 HTTPS，如何劫持 HTTPS 请求
+HTTPS 的加密原理：https://blog.csdn.net/qiuziqiqi/article/details/80585680
+如何开启 HTTPS：https://zhuanlan.zhihu.com/p/43506022  （买证书）
+如何劫持 HTTPS 请求：
+  https://github.com/airuikun/Weekly-FE-Interview/issues/11
+  https://www.zhihu.com/question/22795329
 
-##7.HTTP所有状态码的具体含义，看到异常状态码能快速定位问题
-
-
-##8.HTTP1.1、HTTP2.0带来的改变
-
-
-##9.HTTPS的加密原理，如何开启HTTPS，如何劫持HTTPS请求
-
-
-##10.理解WebSocket协议的底层原理、与HTTP的区别
+##10.理解 WebSocket 协议的底层原理、与 HTTP 的区别
+参考资料：
+https://www.cnblogs.com/nnngu/p/9347635.html
+http://www.ruanyifeng.com/blog/2017/05/websocket.html
