完善计算机基础篇

--- a/自检清单/3.计算机基础/03.设计模式.md
+++ b/自检清单/3.计算机基础/03.设计模式.md
@@ -1,7 +1,10 @@
 #设计模式
 
 ##1.熟练使用前端常用的设计模式编写代码，如单例模式、装饰器模式、代理模式等
+参考资料：https://juejin.im/entry/5ab1f181f265da23a141c6c3
 
 ##2.发布订阅模式和观察者模式的异同以及实际应用
+参考资料：https://www.jianshu.com/p/594f018b68e7
 
 ##3.可以说出几种设计模式在开发中的实际应用，理解框架源码中对设计模式的应用
+暂无
