完善第十章

--- a/自检清单/10.技术之外.md
+++ b/自检清单/10.技术之外.md
@@ -1,9 +1,9 @@
-十、技术之外
+#十、技术之外
 
 
 这部分可能比上面九条加起来重要！
 
-1.了解互联网人员术语：CEO、CTO、COO、CFO、PM、QA、UI、FE、DEV、DBA、OPS等
+##1.了解互联网人员术语：CEO、CTO、COO、CFO、PM、QA、UI、FE、DEV、DBA、OPS等
 
 职称
 CEO：Chief Executive Officer「首席执行官」
@@ -22,17 +22,43 @@ QA：QA Engineer 「测试工程师」
 参考资料：https://www.jianshu.com/p/9a7ca206c1ab
 
 
-2.了解互联网行业术语：B2B、B2C、C2C、O2O等
+##2.了解互联网行业术语：B2B、B2C、C2C、O2O等
+
+B2B
+B2B：（Business To Business）就是企业对企业的电子商务
+
+B2C
+B2C是Business-to-Customer的缩写，而其中文简称为“商对客”。“商对客”是电子商务的一种模式，
+也就是通常说的直接面向消费者销售产品和服务商业零售模式。
+京东自营，中国自营式电商企业，创始人刘强东担任京东集团董事局主席兼首席执行官。
+
+C2C
+C2C实际是电子商务的专业用语，是个人与个人之间的电子商务截至2014年底，淘宝网拥有注册会员近5亿，
+日活跃用户超1.2亿，在线商品数量达到10亿，在c2c市场，淘宝网占95.1%的市场份额。
+淘宝网在手机端的发展势头迅猛，据易观2014年最新发布的手机购物报告数字，
+手机淘宝+天猫的市场份额达到85.1%。截止目前，淘宝网创造的直接就业机会达467.7万。
+
+O2O
+O2O即Online To Offline，是指将线下的商务机会与互联网结合，让互联网成为线下交易的前台，这个概念最早来源于美国。
+O2O的概念非常广泛，只要产业链中既可涉及到线上，又可涉及到线下，
+就可通称为O2O。O2O的优势在于把网上和网下的优势完美结合。通过网购导购机，
+把互联网与地面店完美对接，实现互联网落地。让消费者在享受线上优惠价格的同时，
+又可享受线下贴身的服务。同时，O2O模式还可实现不同商家的联盟。
+苏宁，作为以实体店落地的代表，在2013年3月份正式更名为“苏宁云商”的传统零售企业，
+正在努力摆脱身上的“电商大卖场”的标签，通过线上线下布局，逐步变成一个O2O行业的领跑企业。
+
+参考资料：https://www.jianshu.com/p/5388671f6123
 
 
-3.掌握互联网行业沟通、问答、学习的
+##3.掌握互联网行业沟通、问答、学习的
+参考资料：https://link.juejin.im/?target=https%3A%2F%2Fzhuanlan.zhihu.com%2Fp%2F41431775
 
 
-4.有一定的"PPT"能力
+##4.有一定的"PPT"能力
+买个网络课程
 
+##5.有一定的理财意识，至少了解储蓄、货币基金、保险、指数基金、股票等基本的理财知识
+买个网络课程
 
-5.有一定的理财意识，至少了解储蓄、货币基金、保险、指数基金、股票等基本的理财知识
-
-
-6.掌握在繁重的工作和长期的电脑辐射的情况下保持健康的方法，建立正确的养生知识体系
+##6.掌握在繁重的工作和长期的电脑辐射的情况下保持健康的方法，建立正确的养生知识体系
 
