补充数据结构和算法

--- a/自检清单/4.数据结构和算法/03.数据结构.md
+++ b/自检清单/4.数据结构和算法/03.数据结构.md
@@ -1,9 +1,15 @@
 #数据结构
 
 ##1.理解常见数据结构的特点，以及他们在不同场景下使用的优缺点
+参考资料：https://blog.csdn.net/u014419014/article/details/78770812
 
 ##2.理解数组、字符串的存储原理，并熟练应用他们解决问题
+参考资料：
+https://blog.csdn.net/donspeng/article/details/83444861
+https://www.cnblogs.com/heioray/p/9487093.html
 
 ##3.理解二叉树、栈、队列、哈希表的基本结构和特点，并可以应用它解决问题
+参考资料：看第一问
 
 ##4.了解图、堆的基本结构和使用场景
+参考资料：看第一问
