--- a/自检清单/4.数据结构和算法/04.算法.md
+++ b/自检清单/4.数据结构和算法/04.算法.md
@@ -2,15 +2,21 @@
 
 
 ##1.可计算一个算法的时间复杂度和空间复杂度，可估计业务逻辑代码的耗时和内存消耗
-
+参考资料：https://blog.csdn.net/jsjwk/article/details/84315770
 
 ##2.至少理解五种排序算法的实现原理、应用场景、优缺点，可快速说出时间、空间复杂度
-
+参考资料：
+https://blog.csdn.net/xuedan1992/article/details/81020516
 
 ##3.了解递归和循环的优缺点、应用场景、并可在开发中熟练应用
-
+参考资料：
+https://www.cnblogs.com/ngnetboy/archive/2012/07/30/2615733.html
 
 ##4.可应用回溯算法、贪心算法、分治算法、动态规划等解决复杂问题
-
+参考资料：
+https://blog.csdn.net/cqf949544506/article/details/82222912
 
 ##5.前端处理海量数据的算法方案
+参考资料：
+1.抛给worker API异步处理：https://juejin.im/post/5cb03fbee51d456e853f810b
+2.抛给服务器处理
