浏览器原理v

--- a/自检清单/5.运行环境/02.浏览器原理.md
+++ b/自检清单/5.运行环境/02.浏览器原理.md
@@ -3,15 +3,22 @@
 
 ##1.各浏览器使用的JavaScript引擎以及它们的异同点、如何在代码中进行区分
 
+各浏览器使用的JavaScript引擎：
+https://www.cnblogs.com/gdutbean/archive/2012/02/21/2362003.html
+
 
 ##2.请求数据到请求结束与服务器进行了几次交互
+参考资料：
+https://blog.csdn.net/wangcheng2013/article/details/38944217
 
 
 ##3.可详细描述浏览器从输入URL到页面展现的详细过程
-
+参考资料：
+https://blog.csdn.net/zxcv19961204/article/details/88972553
 
 ##4.浏览器解析HTML代码的原理，以及构建DOM树的流程
-
+参考资料：
+https://segmentfault.com/a/1190000016253407
 
 ##5.浏览器如何解析CSS规则，并将其应用到DOM树上
 
