--- a/自检清单/5.运行环境/03.Node.md
+++ b/自检清单/5.运行环境/03.Node.md
@@ -2,16 +2,34 @@
 
 
 ##1.理解Node在应用程序中的作用，可以使用Node搭建前端运行环境、使用Node操作文件、操作数据库等等
+NodeJS的应用场景:
 
+既然NodeJS处理并发的能力强，但处理计算和逻辑的能力反而很弱，因此，如果我们把复杂的逻辑运算都搬到前端（客户端）完成，
+而NodeJS只需要提供异步I/O，这样就可以实现对高并发的高性能处理。
+情况就很多啦，比如：RESTFUL API、实时聊天、客户端逻辑强大的单页APP，
+具体的例子比如说：本地化的在线音乐应用，本地化的在线搜索应用，本地化的在线APP等。
+顺便提一下Apache，打压了这么多，给颗甜枣。Apache由于其多线程高并发共享内存地址空间的特性，
+那就意味着如果服务器足够强大，处理器足够高核，
+Apache的运作将会非常良好，所以适用于（并发）异步处理相对较少，后台计算量大，后台业务逻辑复杂的应用程序。
+
+Node搭建前端运行环境:
+https://www.cnblogs.com/koleyang/p/5567357.html
+
+使用Node操作文件、操作数据库：（查看node部分）
+https://github.com/chencl1986/Blog
 
 ##2.掌握一种Node开发框架，如Express，Express和Koa的区别
-
+加油！
 
 ##3.熟练使用Node提供的API如Path、Http、Child Process等并理解其实现原理
-
+参考1
 
 ##4.Node的底层运行原理、和浏览器的异同
-
+参考资料：
+https://www.cnblogs.com/peiyu1988/p/8032982.html
+https://www.cnblogs.com/webARM/p/5004595.html
 
 ##5.Node事件驱动、非阻塞机制的实现原理
+参考资料：
+https://blog.csdn.net/TalonZhang/article/details/83722013
 
