--- a/自检清单/6.框架和类库/01.TypeScript.md
+++ b/自检清单/6.框架和类库/01.TypeScript.md
@@ -2,13 +2,21 @@
 
 
 ##1.理解泛型、接口等面向对象的相关概念，TypeScript对面向对象理念的实现
-
+参考资料：官网
+https://www.tslang.cn/docs/handbook/basic-types.html
 
 ##2.理解使用TypeScript的好处，掌握TypeScript基础语法
-
+参考1
 
 ##3.TypeScript的规则检测原理
-
+暂无资料
 
 ##4.可以在React、Vue等框架中使用TypeScript进行开发
 
+vue + typescript : https://segmentfault.com/a/1190000011744210
+
+react + typescript : 
+
+https://www.html.cn/doc/typescript/doc/handbook/tutorials/React.html
+
+https://juejin.im/post/5d0ccc9ff265da1b934e0a44
