--- a/自检清单/6.框架和类库/03.Vue.md
+++ b/自检清单/6.框架和类库/03.Vue.md
@@ -1,11 +1,25 @@
 #Vue
 
 ##1.熟练使用Vue的API、生命周期、钩子函数
+官网：
+https://cn.vuejs.org/v2/api/
 
 ##2.MVVM框架设计理念
+参考资料：
+http://www.ruanyifeng.com/blog/2015/02/mvcmvp_mvvm.html
+https://segmentfault.com/a/1190000009397476
 
 ##3.Vue双向绑定实现原理、Diff算法的内部实现
 
+Vue双向绑定实现原理：https://www.cnblogs.com/wangjiachen666/p/9883916.html
+
+Diff算法的内部实现：https://www.cnblogs.com/wind-lanyan/p/9061684.html
+
 ##4.Vue的事件机制
+参考资料：
+https://segmentfault.com/a/1190000016022641
 
 ##5.从template转换成真实DOM的实现机制
+参考资料：
+https://www.cnblogs.com/answershuto/p/7674294.html
+https://www.jqhtml.com/47663.html?wpfpaction=add&postid=47663
