--- a/自检清单/6.框架和类库/04.多端开发.md
+++ b/自检清单/6.框架和类库/04.多端开发.md
@@ -3,20 +3,32 @@
 
 ##1.单页面应用（SPA）的原理和优缺点，掌握一种快速开发SPA的方案
 
+单页面应用（SPA）的原理和优缺点 : https://www.jianshu.com/p/a02eb15d2d70
+
+掌握一种快速开发SPA的方案 : https://www.cnblogs.com/constantince/p/5586851.html
+
 
 ##2.理解Viewport、em、rem的原理和用法，分辨率、px、ppi、dpi、dp的区别和实际应用
+理解Viewport、em、rem的原理和用法 :
+https://www.cnblogs.com/2050/p/3877280.html
+https://blog.csdn.net/BobbleHat/article/details/88881393
+https://www.jianshu.com/p/6c527b338f27
 
+分辨率、px、ppi、dpi、dp的区别和实际应用:
+https://www.jianshu.com/p/3b612fb6d685
 
 ##3.移动端页面适配解决方案、不同机型适配方案
-
+参考资料：
+https://www.jianshu.com/p/3b45aa981e77
 
 ##4.掌握一种JavaScript移动客户端开发技术，如React Native：可以搭建React Native开发环境，熟练进行开发，可理解React Native的运作原理，不同端适配
-
+暂无资料
 
 ##5.掌握一种JavaScript PC客户端开发技术，如Electron：可搭建Electron开发环境，熟练进行开发，可理解Electron的运作原理
-
+暂无资料
 
 ##6.掌握一种小程序开发框架或原生小程序开发
-
+暂无资料
 
 ##7.理解多端框架的内部实现原理，至少了解一个多端框架的使用
+暂无资料
