补充开发和调试

--- a/自检清单/6.框架和类库/07.开发和调试.md
+++ b/自检清单/6.框架和类库/07.开发和调试.md
@@ -1,9 +1,16 @@
 #开发和调试
 
 ##1.熟练使用各浏览器提供的调试工具
+参考资料：https://www.yuque.com/fe9/basic/gcawte
 
 ##2.熟练使用一种代理工具实现请求代理、抓包，如charls
+参考资料：《HTTP抓包实战》_肖佳.pdf
 
 ##3.可以使用Android、IOS模拟器进行调试，并掌握一种真机调试方案
+参考资料：
+https://www.jianshu.com/p/00aa1165d8a6
+https://aotu.io/notes/2017/02/24/Mobile-debug/index.html
 
 ##4.了解Vue、React等框架调试工具的使用
+vue - vue-devtools  https://github.com/vuejs/vue-devtools/blob/master/shells/electron/README.md
+React - react-devtools  https://github.com/facebook/react-devtools
