--- a/自检清单/6.框架和类库/05.数据流管理.md
+++ b/自检清单/6.框架和类库/05.数据流管理.md
@@ -2,7 +2,7 @@
 
 
 ##1.掌握React和Vue传统的跨组件通信方案，对比采用数据流管理框架的异同
-
+参考资料：https://www.jianshu.com/p/8d1f1f9226c7
 
 ##2.熟练使用Redux管理数据流，并理解其实现原理，中间件实现原理
 
