补充项目构建

--- a/自检清单/7.前端工程/01.项目构建.md
+++ b/自检清单/7.前端工程/01.项目构建.md
@@ -2,24 +2,26 @@
 
 
 ##1.理解npm、yarn依赖包管理的原理，两者的区别
-
+参考资料：https://blog.csdn.net/qq_32614411/article/details/80894605
 
 ##2.可以使用npm运行自定义脚本
-
+npm start 了解一下
 
 ##3.理解Babel、ESLint、webpack等工具在项目中承担的作用
-
+Babel -》 编译 ESLint-》 规范格式化 webpack -》 打包
 
 ##4.ESLint规则检测原理，常用的ESLint配置
-
+参考资料：https://www.jianshu.com/p/526db7eeeecc
 
 ##5.Babel的核心原理，可以自己编写一个Babel插件
-
+参考资料：https://www.jianshu.com/p/e9b94b2d52e2
 
 ##6.可以配置一种前端代码兼容方案，如Polyfill
-
+暂无资料
 
 ##7.Webpack的编译原理、构建流程、热更新原理，chunk、bundle和module的区别和应用
-
+参考资料：
+https://mengxxself.github.io/tags/webpack/
 
 ##8.可熟练配置已有的loaders和plugins解决问题，可以自己编写loaders和plugins
+暂无资料
