补充开发加速

--- a/自检清单/7.前端工程/03.开发提速.md
+++ b/自检清单/7.前端工程/03.开发提速.md
@@ -2,6 +2,19 @@
 
 ##1.熟练掌握一种接口管理、接口mock工具的使用，如yapi
 
+常用的接口管理工具：
+http://blog.cxiangnet.cn/2019/03/26/常见的api接口管理工具/
+
+easy-mock：
+https://easy-mock.com/docs
+
 ##2.掌握一种高效的日志埋点方案，可快速使用日志查询工具定位线上问题
+埋点：
+https://www.cnblogs.com/liuhao-web/p/9609884.html
+
+https://blog.csdn.net/ywl570717586/article/details/89852222
+
 
 ##3.理解TDD与BDD模式，至少会使用一种前端单元测试框架
+
+理解TDD与BDD模式：https://blog.csdn.net/wangxysuey/article/details/89191269
