--- a/自检清单/7.前端工程/04.版本控制.md
+++ b/自检清单/7.前端工程/04.版本控制.md
@@ -2,6 +2,18 @@
 
 ##1.理解Git的核心原理、工作流程、和SVN的区别
 
+git核心原理 : https://www.cnblogs.com/yelbosh/p/7471979.html
+
+git工作流程 : https://blog.csdn.net/slowlifes/article/details/79569084
+
+git和SVN的区别 : https://www.cnblogs.com/Sungeek/p/9152223.html
+
 ##2.熟练使用常规的Git命令、git rebase、git stash等进阶命令
 
+参考资料：廖雪峰
+
 ##3.可以快速解决线上分支回滚、线上分支错误合并等复杂问题
+
+解决线上分支回滚 ： https://blog.csdn.net/monkey_four/article/details/78919381
+
+线上分支错误合并 ： https://segmentfault.com/a/1190000017855483
